WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180775
Web Inspector: Cmd-Option-R in docked inspector causes the inspector to reload instead of the inspected page
https://bugs.webkit.org/show_bug.cgi?id=180775
Summary
Web Inspector: Cmd-Option-R in docked inspector causes the inspector to reloa...
Joseph Pecoraro
Reported
2017-12-13 15:29:14 PST
Cmd-Option-R in docked inspector causes the inspector to reload instead of the inspected page Steps to Reproduce: 1. Inspect this page 2. Dock inspector to bottom 3. Click in inspector 4. Cmd-Option-R => Expected page to reload, instead the inspector page reloaded
Attachments
[PATCH] Proposed Fix
(28.26 KB, patch)
2017-12-13 15:33 PST
,
Joseph Pecoraro
bburg
: review-
bburg
: commit-queue-
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(23.09 KB, patch)
2017-12-13 20:46 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(28.54 KB, patch)
2017-12-13 20:50 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-12-13 15:29:21 PST
<
rdar://problem/35964592
>
Joseph Pecoraro
Comment 2
2017-12-13 15:33:14 PST
Created
attachment 329271
[details]
[PATCH] Proposed Fix
Blaze Burg
Comment 3
2017-12-13 20:40:28 PST
Comment on
attachment 329271
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=329271&action=review
Looks good but please fix build issues then I'll mark r+
> Source/WebKit/UIProcess/mac/WKInspectorViewController.mm:237 > + if (linkedOnOrAfter(WebKit::SDKVersion::FirstWithExpiredOnlyReloadBehavior))
Didn't know we had this now, cool.
> Source/WebKit/UIProcess/mac/WKInspectorWKWebView.h:38 > +@protocol WKInspectorWKWebViewIBDelegate
This protocol name bothers me. It shouldn't mention IB since there are no IB types/macros in the signature. How about just @protocol WKInspectorWKWebViewDelegate?
Joseph Pecoraro
Comment 4
2017-12-13 20:46:33 PST
> How about just @protocol WKInspectorWKWebViewDelegate?
Yeah, sounds good.
Joseph Pecoraro
Comment 5
2017-12-13 20:46:59 PST
Created
attachment 329321
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 6
2017-12-13 20:50:13 PST
Created
attachment 329322
[details]
[PATCH] Proposed Fix Better patch with -M100% so git doesn't think new files are from old files...
Blaze Burg
Comment 7
2017-12-14 08:47:55 PST
Comment on
attachment 329322
[details]
[PATCH] Proposed Fix r=e
WebKit Commit Bot
Comment 8
2017-12-14 09:08:55 PST
Comment on
attachment 329322
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 329322 Committed
r225907
: <
https://trac.webkit.org/changeset/225907
>
WebKit Commit Bot
Comment 9
2017-12-14 09:08:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug